CN fonts and meta data

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -11,7 +11,7 @@
     }
 %>
 <!DOCTYPE html>
-<html lang="<%= config.language %>">
+<html lang="zh-cn">
     <%- partial('_partial/head') %>
     <body>
         <div id="blog">
