CN Fonts: Serif & Letter-Spacing

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -158,6 +158,7 @@
             <meta class="swiftype" name="image" data-type="enum" content="<%= photo %>" />
         <% }) %>
     <% } %>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:400,700&amp;subset=chinese-simplified,cyrillic,japanese" rel="stylesheet">
     <!--STYLES-->
     <%- css('assets/css/all.css') %>
     <%- css('assets/css/jquery.fancybox.css') %>
