--- a/layout/_partial/post.ejs
+++ b/layout/_partial/post.ejs
@@ -27,7 +27,11 @@
     <% if (!post.coverImage || post.coverMeta === 'out') { %>
         <%- partial('post/header')%>
     <% } %>
-    <div class="post-content markdown">
+    <% if (post.serifFonts) { %>
+        <div class="post-content-serif markdown">
+    <%} else { %>
+        <div class="post-content markdown">
+    <% } %>
         <div class="main-content-wrap">
             <%- postContent %>
             <%- partial('post/gallery') %>
