--- a/source/_css/utils/_variables.scss
+++ b/source/_css/utils/_variables.scss
@@ -3,26 +3,28 @@
 
 // Font families
 $open-sans:            'Open Sans';
-$open-sans-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, 'PingFang SC', 'Microsoft YaHei', sans-serif;
+$open-sans-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', 'PingFang SC', sans-serif;
 $merriweather-serif:   'Merriweather', -apple-system, BlinkMacSystemFont, 'PingFang SC', 'Source Han Sans SC', 'Noto Sans CJK SC', 'Microsoft YaHei', sans-serif;
+$noto-serif-sc:        'Merriweather', 'Noto Serif SC', 'Source Han Serif SC', 'PingFang SC', 'Microsoft YaHei', sans-serif;
 $monospace:             Menlo, Consolas, monospace;
 
 $font-family-base: $open-sans-sans-serif;
 
 $font-families: (
    // base
-   'headings':          $open-sans-sans-serif,
+   'headings':           $open-sans-sans-serif,
    // components
-   'code':              $monospace,
-   'caption':           $merriweather-serif,
-   'image-gallery':     $open-sans,
-   'post-header-cover': $merriweather-serif,
-   'post-meta':         $open-sans-sans-serif,
-   'post-content':      $merriweather-serif,
-   'post-excerpt-link': $open-sans-sans-serif,
-   'highlight':         $monospace,
+   'code':               $monospace,
+   'caption':            $merriweather-serif,
+   'image-gallery':      $open-sans,
+   'post-header-cover':  $merriweather-serif,
+   'post-meta':          $open-sans-sans-serif,
+   'post-content':       $merriweather-serif,
+   'post-content-serif': $noto-serif-sc,
+   'post-excerpt-link':  $open-sans-sans-serif,
+   'highlight':          $monospace,
    // layout
-   'sidebar':           $open-sans-sans-serif
+   'sidebar':            $open-sans-sans-serif
 );
 
 // equal to 15px
