--- a/source/_css/components/_post.scss
+++ b/source/_css/components/_post.scss
@@ -56,6 +56,7 @@
     .post-content-serif {
         text-rendering: optimizelegibility;
         letter-spacing: -0.2px;
+        text-align:     justify;
         font-family:    map-get($font-families, 'post-content-serif');
         color:          map-get($colors, base);
         margin-top:     20px;
