scroll animation & larger h1 top margin

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -11,7 +11,7 @@
     }
 %>
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="zh-Hans-CN">
     <%- partial('_partial/head') %>
     <body>
         <div id="blog">
