--- a/source/_css/components/_markdown.scss
+++ b/source/_css/components/_markdown.scss
@@ -6,6 +6,9 @@
                 font-size: $value;
             }
         }
+        h1 {
+            margin-top: 60px;
+        }
     }
 }
 
@@ -27,6 +30,9 @@
             #{$key} {
                 font-size: $value - $markdown-headings-font-size-md-screen-reduction-factor;
             }
+        }
+        h1 {
+            margin-top: 60px;
         }
     }
 }
