--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -122,6 +122,9 @@
     <% if (theme.favicon) { %>
         <link rel="icon" href="<%= resolve_asset_url(theme.image_dir, theme.favicon) %>">
     <% } %>
+    <% if (theme.apple_touch_icon) { %>
+        <link rel="apple-touch-icon" sizes="180x180" href="<%= resolve_asset_url(theme.image_dir, theme.apple_touch_icon) %>">
+    <% } %>
     <% if ((config.feed) && (config.feed.path.length)) { %>
         <link rel="alternate" type="application/atom+xml" title="RSS" href="<%- url_for(config.feed.path) %>">
     <% } %>
