button beautify & fancybox protect & css

--- a/source/_css/components/_markdown.scss
+++ b/source/_css/components/_markdown.scss
@@ -4,6 +4,7 @@
         @each $key, $value in $markdown-headings-font-size {
             #{$key} {
                 font-size: $value;
+                text-align: left;
             }
         }
         h1 {
