--- a/source/_css/components/_post-actions.scss
+++ b/source/_css/components/_post-actions.scss
@@ -83,10 +83,14 @@
             line-height: 40px;
 
             .post-bar-action-btn {
-                // margin-right: 15px;
-                padding:  8px 14px;
+                padding:   0;
+                border:    0;
+                width:  40px;
+                height: 40px;
+                background: rgba(235,235,235,0.8);
+                box-shadow: 0 0 2px;
+                display: block;
                 border-radius: 50%;
-                box-shadow: 0.1px 0.1px 1px;
             }          
         }
     }
