--- a/layout/_partial/post.ejs
+++ b/layout/_partial/post.ejs
@@ -50,8 +50,8 @@
         <% if (post.comments) { %>
             <% if (theme.disqus_shortname) { %>
                 <%- partial('post/disqus') %>
-            <% } else if (theme.gitment.enable) { %>
-                <%- partial('post/gitment') %>
+            <% } else if (theme.gitalk.enable) { %>
+                <%- partial('post/gitalk') %>
             <% } %>
         <% } %>
     </div>
