--- a/layout/_partial/post/actions.ejs
+++ b/layout/_partial/post/actions.ejs
@@ -41,9 +41,9 @@
             </li>
         <% } %>
         <% if (post.comments) { %>
-            <% if (theme.gitment.enable) { %>
+            <% if (theme.gitalk.enable) { %>
                 <li class="post-action">
-                    <a class="post-action-btn btn btn--default" href="#gitment">
+                    <a class="post-action-btn btn btn--default" href="#gitalk">
                          <i class="fa fa-comment"></i>
                     </a>
                 </li>
