--- a/layout/_partial/post/bar-actions.ejs
+++ b/layout/_partial/post/bar-actions.ejs
@@ -10,9 +10,9 @@
             </a>
         </div>
         <% if (post.comments) { %>
-            <% if (theme.gitment.enable) { %>
+            <% if (theme.gitalk.enable) { %>
                 <div class="post-action">
-                    <a class="post-bar-action-btn btn btn--default" href="#gitment">
+                    <a class="post-bar-action-btn btn btn--default" href="#gitalk">
                          <i class="fas fa-angle-down"></i>
                     </a>
                 </div>
