--- a/source/_css/base/_base.scss
+++ b/source/_css/base/_base.scss
@@ -34,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-    letter-spacing: -0.04em;
+    letter-spacing: -0.01em;
     font-family:    map-get($font-families, 'headings');
     font-weight:    700;
     line-height:    1.45em;
@@ -142,11 +142,13 @@ pre > code {
 // inline code
 code {
     font-size:        map-get($font-size, medium);
-    display:          inline-block;
+    // display:          inline-block;
     font-family:      map-get($font-families, 'code');
     font-weight:      400;
     background-color: map-get($highlight, 'background');
-    padding:          0 10px;
+    // padding:          0 10px;
+    padding:          3px 10px;
+    border-radius:    5px;
 }
 
 acronym,
