--- a/source/_css/components/_post.scss
+++ b/source/_css/components/_post.scss
@@ -29,8 +29,35 @@
     }
     .post-content {
         text-rendering: optimizelegibility;
-        letter-spacing: -0.3px;
+        letter-spacing: -0.2px;
         font-family:    map-get($font-families, 'post-content');
+        color:          map-get($colors, base);
+        margin-top:     20px;
+        font-weight:    400;
+        overflow:       hidden;
+        @include prefix('hypens', 'auto', 'webkit' 'moz');
+
+        img {
+            display:   block;
+            width:     auto;
+            max-width: 100%;
+        }
+        :not(blockquote):not(li):not(.alert) {
+            & > p {
+                margin: 1.5em 0 0 0;
+            }
+        }
+        li {
+            p {
+                margin: 0 0 0 0;
+            }
+        }
+    }
+    .post-content-serif {
+        text-rendering: optimizelegibility;
+        letter-spacing: -0.2px;
+        text-align:     justify;
+        font-family:    map-get($font-families, 'post-content-serif');
         color:          map-get($colors, base);
         margin-top:     20px;
         font-weight:    400;
@@ -88,6 +115,9 @@
 // Increase font-size on medium and large screen
 @media #{$medium-and-up} {
     .post-content {
+        font-size: 1.7rem;
+    }
+    .post-content-serif {
         font-size: 1.7rem;
     }
 }
