--- a/source/_css/utils/_variables.scss
+++ b/source/_css/utils/_variables.scss
@@ -3,26 +3,28 @@
 
 // Font families
 $open-sans:            'Open Sans';
-$open-sans-sans-serif: 'Open Sans', sans-serif;
-$merriweather-serif:   'Merriweather', serif;
+$open-sans-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', 'PingFang SC', sans-serif;
+$merriweather-serif:   'Merriweather', -apple-system, BlinkMacSystemFont, 'PingFang SC', 'Source Han Sans SC', 'Noto Sans CJK SC', 'Microsoft YaHei', sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$noto-serif-sc:        'Merriweather', 'Noto Serif SC', 'Source Han Serif SC', 'PingFang SC', 'Microsoft YaHei', sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $monospace:             Menlo, Consolas, monospace;
 
 $font-family-base: $open-sans-sans-serif;
 
 $font-families: (
    // base
-   'headings':          $open-sans-sans-serif,
+   'headings':           $open-sans-sans-serif,
    // components
-   'code':              $monospace,
-   'caption':           $merriweather-serif,
-   'image-gallery':     $open-sans,
-   'post-header-cover': $merriweather-serif,
-   'post-meta':         $open-sans-sans-serif,
-   'post-content':      $merriweather-serif,
-   'post-excerpt-link': $open-sans-sans-serif,
-   'highlight':         $monospace,
+   'code':               $monospace,
+   'caption':            $merriweather-serif,
+   'image-gallery':      $open-sans,
+   'post-header-cover':  $merriweather-serif,
+   'post-meta':          $open-sans-sans-serif,
+   'post-content':       $merriweather-serif,
+   'post-content-serif': $noto-serif-sc,
+   'post-excerpt-link':  $open-sans-sans-serif,
+   'highlight':          $monospace,
    // layout
-   'sidebar':           $open-sans-sans-serif
+   'sidebar':            $open-sans-sans-serif
 );
 
 // equal to 15px
@@ -86,7 +88,7 @@ $screen-min: (
      // you have to change value of `mediumScreenWidth` too in `source/_js/sidebar.js`
     'md-min': 768px,
     'lg-min': 1024px,
-    'xlg-min': 1280px
+    'xlg-min': 1440px
 );
 $screen-max: (
     'xs-max': map-get($screen-min, sm-min) - 1,
@@ -216,7 +218,7 @@ $image-gallery-photos-margin: 2px;
 
 // Main content
 $main-content: (
-    'max-width':          750px,
+    'max-width':          864px,
     'padding-right-left': 20px,
 );
 
@@ -226,12 +228,12 @@ $main-content: (
 // because they are larger than the post title or something like that
 // font-size : (X.Xrem = XXpx, 1.0rem = 10px)
 $markdown-headings-font-size: (
-    'h1': 3rem,
-    'h2': 2.7rem,
-    'h3': 2.4rem,
-    'h4': 2.1rem,
-    'h5': 1.9rem,
-    'h6': 1.7rem
+    'h1': 2.8rem,
+    'h2': 2.4rem,
+    'h3': 2.1rem,
+    'h4': 1.9rem,
+    'h5': 1.8rem,
+    'h6': 1.8rem
 );
 // Reduction of markdwon headings on small screen and down
 $markdown-headings-font-size-sm-screen-reduction-factor: 0.35rem;
@@ -244,7 +246,7 @@ $pagination-height: 60px;
 // Post thumbnail image
 // Width and height of post's thumbnail image
 $post-thumbnail-image-width: 140px;
-$post-bottom-thumbnail-image-max-height: 250px;
+$post-bottom-thumbnail-image-max-height: 320px;
 
 // Tooltip
 $tooltip: (
