--- a/source/_css/components/_markdown.scss
+++ b/source/_css/components/_markdown.scss
@@ -21,6 +21,9 @@
                 font-size: $value - $markdown-headings-font-size-sm-screen-reduction-factor;
             }
         }
+        h1 {
+            margin-top: 40px;
+        }
     }
 }
 
@@ -33,7 +36,7 @@
             }
         }
         h1 {
-            margin-top: 60px;
+            margin-top: 50px;
         }
     }
 }
